Added logging for scan JSON. Added debug option to import scan JSON.

--- a/VidCoder/View/DebugJsonDialog.xaml
+++ b/VidCoder/View/DebugJsonDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-	x:Class="VidCoder.View.DebugEncodeJsonDialog"
+	x:Class="VidCoder.View.DebugJsonDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
