--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1904,6 +1904,18 @@
 																	Source="/Icons/Remove.png" />
 															</MenuItem.Icon>
 														</MenuItem>
+														<MenuItem
+															Command="{Binding ProcessingService.RemoveAllJobs}"
+															Header="{x:Static res:MainRes.RemoveAllFomQueueMenuItem}"
+															Visibility="{Binding ProcessingService.CanClearQueue,
+															                     Converter={StaticResource VisibilityConverter}}">
+															<MenuItem.Icon>
+																<Image
+																	Width="16"
+																	Height="16"
+																	Source="/Icons/Clear.png" />
+															</MenuItem.Icon>
+														</MenuItem>
 														<Separator />
 														<MenuItem Command="{Binding OpenSourceFolder}" Header="{x:Static res:MainRes.OpenSourceFolderOption}">
 															<MenuItem.Icon>
@@ -1935,6 +1947,19 @@
 										<ContextMenu>
 											<MenuItem Command="{Binding CustomizeQueueColumns}" Header="{x:Static res:MainRes.CustomizeColumnsMenuItem}" />
 											<Separator />
+											<MenuItem
+												Command="{Binding ProcessingService.RemoveAllJobs}"
+												Header="{x:Static res:MainRes.RemoveAllFomQueueMenuItem}"
+												Visibility="{Binding ProcessingService.CanClearQueue,
+												                     Converter={StaticResource VisibilityConverter}}">
+												<MenuItem.Icon>
+													<Image
+														Width="16"
+														Height="16"
+														Source="/Icons/Clear.png" />
+												</MenuItem.Icon>
+											</MenuItem>
+											<Separator Visibility="{Binding ProcessingService.CanClearQueue, Converter={StaticResource VisibilityConverter}}" />
 											<MenuItem Command="{Binding ProcessingService.ImportQueue}" Header="{x:Static res:MainRes.ImportQueue}" />
 											<MenuItem
 												Command="{Binding ProcessingService.ExportQueue}"
