Behavior changed for dragging in an SRT subtitle. Instead of popping up a dialog box, it gives a status message and scrolls the main window the the added subtitle.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1620,6 +1620,7 @@
 								                     Converter={StaticResource VisibilityConverter}}" />
 
 							<ListView
+								Name="srtListView"
 								Margin="-1 0 -1 5"
 								VerticalAlignment="Top"
 								VidCoderDragDrop:DragDropHelper.DragDropTemplate="{StaticResource SrtDragTemplate}"
@@ -2145,7 +2146,7 @@
 								Name="statusTextBlock"
 								Margin="3 1 5 3"
 								FontSize="14"
-								Text="Status message" />
+								TextWrapping="Wrap" />
 						</Border>
 					</Grid>
 				</Grid>
