Changed to allow decimals in the target size field.

--- a/VidCoder/View/Panels/VideoPanel.xaml
+++ b/VidCoder/View/Panels/VideoPanel.xaml
@@ -246,6 +246,7 @@
 							Margin="8 0 0 0"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Center"
+							Modulus="0.1"
 							AllowEmpty="False"
 							AutomationProperties.Name="{x:Static res:EncodingRes.TargetSizeRadioButton}"
 							IsEnabled="{Binding VideoEncodeRateType,
