When an encoding preset is chosen by a picker, we now correctly disable changing the encoding preset from the ribbon. Fixed preset getting marked as modified when switching to a preset with a different container. Fixed long launch time caused by hanging registry watch setup for the Windows theme.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -514,7 +514,11 @@
 							Header="{Binding EncodingPresetButtonText}"
 							LargeIcon="/Icons/EncodingSettings.png"
 							ToolTip="{x:Static res:MainRes.EncodingSettingsButtonToolTip}">
-							<controls:PresetTreeViewContainer x:Name="presetTreeViewContainer" MinWidth="250" />
+							<controls:PresetTreeViewContainer
+								x:Name="presetTreeViewContainer"
+								MinWidth="250"
+								IsEnabled="{Binding PickersService.SelectedPicker.Picker.UseEncodingPreset,
+								                    Converter={StaticResource InverseBoolConverter}}" />
 						</fluent:SplitButton>
 						<fluent:SplitButton
 							x:Name="pickerButton"
