--- a/VidCoder/Controls/PickerList.xaml
+++ b/VidCoder/Controls/PickerList.xaml
@@ -2,14 +2,22 @@
 	x:Class="VidCoder.Controls.PickerList"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:VidCoderDragDrop="clr-namespace:VidCoder.DragDropUtils"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:VidCoder.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
+	<UserControl.Resources>
+		<DataTemplate x:Key="PickerDragTemplate">
+			<TextBlock Text="{Binding DisplayNameWithStar}" />
+		</DataTemplate>
+	</UserControl.Resources>
 	<ListBox
 		HorizontalAlignment="Stretch"
+		Name="listBox"
+		VidCoderDragDrop:DragDropHelper.DragDropTemplate="{StaticResource PickerDragTemplate}"
 		Background="Transparent"
 		BorderThickness="0"
 		Canvas.ZIndex="3"
