--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -2,6 +2,7 @@
 	x:Class="VidCoder.View.PickerWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:VidCoderDragDrop="clr-namespace:VidCoder.DragDropUtils"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -41,7 +42,8 @@
 		<controls:PickerList
 			Grid.Column="0"
 			HorizontalAlignment="Stretch"
-			Background="{DynamicResource AlternateBackgroundBrush}" />
+			Background="{DynamicResource AlternateBackgroundBrush}"
+			EnableDragDrop="True" />
 
 		<GridSplitter
 			Grid.Column="1"
