--- a/VidCoder/Themes/Dark.xaml
+++ b/VidCoder/Themes/Dark.xaml
@@ -8,6 +8,7 @@
 	<SolidColorBrush x:Key="ToolBarBackgroundBrush" Color="#555555" />
 	<SolidColorBrush x:Key="WindowBrush" Color="Black" />
 	<SolidColorBrush x:Key="WindowTextBrush" Color="White" />
+	<SolidColorBrush x:Key="WindowBorderBrush" Color="#333333" />
 	<SolidColorBrush x:Key="SplitterBrush" Color="#636363" />
 	<SolidColorBrush x:Key="SpecialTextBrush" Color="#70C9FF" />
 	<SolidColorBrush x:Key="SpecialTextHighlightedBrush" Color="#70C9FF" />
@@ -15,6 +16,9 @@
 	<SolidColorBrush x:Key="MouseOverBackgroundBrush" Color="#1E4B60" />
 	<SolidColorBrush x:Key="MouseOverOverlayBackgroundBrush" Color="#33FFFFFF" />
 	<SolidColorBrush x:Key="PressedOverlayBackgroundBrush" Color="#44FFFFFF" />
+	<SolidColorBrush x:Key="MouseOverWindowCloseButtonBackgroundBrush" Color="#E81123" />
+	<SolidColorBrush x:Key="MouseOverWindowCloseButtonForegroundBrush" Color="#FFFFFF" />
+	<SolidColorBrush x:Key="PressedWindowCloseButtonBackgroundBrush" Color="#F1707A" />
 	<SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#2A6884" />
 	<SolidColorBrush x:Key="PopupInfoBackgroundBrush" Color="#333333" />
 	<SolidColorBrush x:Key="InlineWarningBackgroundBrush" Color="#68680D" />
