--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -15,6 +15,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:VidCoder.Model"
     xmlns:res="clr-namespace:VidCoder.Resources"
+    xmlns:shell="clr-namespace:System.Windows.Shell"
     xmlns:tb="http://www.hardcodet.net/taskbar"
     xmlns:viewmodel="clr-namespace:VidCoder.ViewModel"
     Title="{Binding WindowTitle}"
@@ -23,6 +24,7 @@
     MinWidth="617"
     MinHeight="445"
     d:DataContext="{d:DesignInstance viewmodel:MainViewModel}"
+    Background="{DynamicResource WindowBrush}"
     Closing="Main_OnClosing"
     Deactivated="OnWindowDeactivated"
     MouseDown="Window_MouseDown"
@@ -30,7 +32,11 @@
     StateChanged="Window_StateChanged"
     Style="{StaticResource NormalWindow}"
     TextOptions.TextFormattingMode="Display"
+    WindowStyle="None"
     mc:Ignorable="d">
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="30" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
+    </WindowChrome.WindowChrome>
     <Window.Resources>
         <converters:SampleRateDisplayConverter x:Key="SampleRateDisplayConverter" />
         <converters:ChapterVMConverter x:Key="ChapterVMConverter" />
@@ -440,9 +446,12 @@
         original allocated size for it. We need to keep track of the window client area so we
         know how to restore it in a way that fits.
     -->
-    <Grid Name="rootGrid">
+	<Border Name="rootGrid" Style="{StaticResource WindowMainPanelStyle}" BorderThickness="1" BorderBrush="{DynamicResource WindowBorderBrush}">
         <Grid Name="contentGrid">
             <Grid.RowDefinitions>
+                <!--  Title bar  -->
+                <RowDefinition Height="30" />
+
                 <!--  Ribbon  -->
                 <RowDefinition Height="Auto" />
 
@@ -467,9 +476,81 @@
                 Height="0"
                 AutomationProperties.LiveSetting="Assertive" />
 
+            <!--  Title bar  -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Image
+                    Grid.Column="0"
+                    Width="22"
+                    Height="22"
+                    Margin="4"
+                    Source="/Icons/VidCoder32.png" />
+                <TextBlock
+                    Grid.Column="1"
+                    Margin="4 0 0 0"
+                    VerticalAlignment="Center"
+                    FontSize="14"
+                    Text="{Binding WindowTitle}" />
+
+                <Button
+                    Grid.Column="2"
+                    Click="OnMinimizeButtonClick"
+                    RenderOptions.EdgeMode="Aliased"
+                    Style="{StaticResource TitleBarButtonStyle}">
+                    <Path
+                        Width="46"
+                        Height="32"
+                        Data="M 18,15 H 28"
+                        Stroke="{DynamicResource WindowTextBrush}"
+                        StrokeThickness="1" />
+                </Button>
+                <Button
+                    Name="maximizeButton"
+                    Grid.Column="3"
+                    Click="OnMaximizeRestoreButtonClick"
+                    Style="{StaticResource TitleBarButtonStyle}">
+                    <Path
+                        Width="46"
+                        Height="32"
+                        Data="M 18.5,10.5 H 27.5 V 19.5 H 18.5 Z"
+                        Stroke="{DynamicResource WindowTextBrush}"
+                        StrokeThickness="1" />
+                </Button>
+                <Button
+                    Name="restoreButton"
+                    Grid.Column="3"
+                    Click="OnMaximizeRestoreButtonClick"
+                    Style="{StaticResource TitleBarButtonStyle}">
+                    <Path
+                        Width="46"
+                        Height="32"
+                        Data="M 18.5,12.5 H 25.5 V 19.5 H 18.5 Z M 20.5,12.5 V 10.5 H 27.5 V 17.5 H 25.5"
+                        Stroke="{DynamicResource WindowTextBrush}"
+                        StrokeThickness="1" />
+                </Button>
+                <Button
+                    Grid.Column="4"
+                    Click="OnCloseButtonClick"
+                    Style="{StaticResource TitleBarCloseButtonStyle}">
+                    <Path
+                        Width="46"
+                        Height="32"
+                        Data="M 18,11 27,20 M 18,20 27,11"
+                        Stroke="{Binding Path=Foreground,
+                                         RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                        StrokeThickness="1" />
+                </Button>
+            </Grid>
+
             <!--  Ribbon  -->
             <fluent:Ribbon
-                Grid.Row="0"
+                Grid.Row="1"
                 AreTabHeadersVisible="False"
                 CanMinimize="False"
                 IsQuickAccessToolBarVisible="False"
@@ -640,7 +721,7 @@
 
             <!--  Video choices on load  -->
             <Grid
-                Grid.Row="1"
+                Grid.Row="2"
                 MinWidth="220"
                 Margin="0"
                 VerticalAlignment="Stretch"
@@ -795,7 +876,7 @@
             <!--  Source area  -->
             <ScrollViewer
                 Name="sourceScrollViewer"
-                Grid.Row="1"
+                Grid.Row="2"
                 Margin="0"
                 Background="{DynamicResource AlternateBackgroundBrush}"
                 VerticalScrollBarVisibility="Auto"
@@ -1751,7 +1832,7 @@
 
             <!--  Scan progress  -->
             <Grid
-                Grid.Row="1"
+                Grid.Row="2"
                 Margin="26 0 40 0"
                 VerticalAlignment="Center"
                 Visibility="{Binding VideoSourceState,
@@ -1796,7 +1877,7 @@
             </Grid>
 
             <GridSplitter
-                Grid.Row="2"
+                Grid.Row="3"
                 Grid.Column="0"
                 Height="4"
                 HorizontalAlignment="Stretch"
@@ -1806,7 +1887,7 @@
                 ShowsPreview="True" />
 
             <!--  Below source - Destination / queue / Encode progress  -->
-            <Grid Grid.Row="3">
+            <Grid Grid.Row="4">
                 <Grid.RowDefinitions>
                     <!--  Destination  -->
                     <RowDefinition Height="Auto" />
@@ -2193,6 +2274,7 @@
                 <Grid
                     Grid.Row="2"
                     Height="28"
+                    Background="{DynamicResource AlternateBackgroundBrush}"
                     Visibility="{Binding ProcessingService.Encoding,
                                          Converter={StaticResource VisibilityConverter}}">
                     <Grid.ColumnDefinitions>
@@ -2310,6 +2392,6 @@
                 </Grid>
             </Grid>
         </Grid>
-    </Grid>
+    </Border>
 </Window>
 
