--- a/VidCoder/XamlResources/Button.xaml
+++ b/VidCoder/XamlResources/Button.xaml
@@ -63,5 +63,76 @@
 		TargetType="Button">
 		<Setter Property="Background" Value="Transparent" />
 		<Setter Property="BorderThickness" Value="0" />
+		<Setter Property="Padding" Value="0" />
+	</Style>
+
+	<Style x:Key="TitleBarButtonStyle" TargetType="Button">
+		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+		<Setter Property="Padding" Value="0" />
+		<Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
+		<Setter Property="IsTabStop" Value="False" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type Button}">
+					<Border
+						x:Name="border"
+						Background="Transparent"
+						BorderThickness="0"
+						SnapsToDevicePixels="true">
+						<ContentPresenter
+							x:Name="contentPresenter"
+							Margin="0"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Center"
+							Focusable="False"
+							RecognizesAccessKey="True" />
+					</Border>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsMouseOver" Value="true">
+							<Setter TargetName="border" Property="Background" Value="{DynamicResource MouseOverOverlayBackgroundBrush}" />
+						</Trigger>
+						<Trigger Property="IsPressed" Value="true">
+							<Setter TargetName="border" Property="Background" Value="{DynamicResource PressedOverlayBackgroundBrush}" />
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
+	<Style x:Key="TitleBarCloseButtonStyle" TargetType="Button">
+		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+		<Setter Property="Padding" Value="0" />
+		<Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
+		<Setter Property="IsTabStop" Value="False" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type Button}">
+					<Border
+						x:Name="border"
+						Background="Transparent"
+						BorderThickness="0"
+						SnapsToDevicePixels="true">
+						<ContentPresenter
+							x:Name="contentPresenter"
+							Margin="0"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Center"
+							Focusable="False"
+							RecognizesAccessKey="True" />
+					</Border>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsMouseOver" Value="true">
+							<Setter TargetName="border" Property="Background" Value="{DynamicResource MouseOverWindowCloseButtonBackgroundBrush}" />
+							<Setter Property="Foreground" Value="{DynamicResource MouseOverWindowCloseButtonForegroundBrush}" />
+						</Trigger>
+						<Trigger Property="IsPressed" Value="true">
+							<Setter TargetName="border" Property="Background" Value="{DynamicResource PressedWindowCloseButtonBackgroundBrush}" />
+							<Setter Property="Foreground" Value="{DynamicResource MouseOverWindowCloseButtonForegroundBrush}" />
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
 	</Style>
 </ResourceDictionary>
