--- a/VidCoder/View/ApplyUpdateConfirmation.xaml
+++ b/VidCoder/View/ApplyUpdateConfirmation.xaml
@@ -2,6 +2,7 @@
     x:Class="VidCoder.ApplyUpdateConfirmation"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:VidCoder.Controls"
     xmlns:res="clr-namespace:VidCoder.Resources"
     Title="{x:Static res:MiscRes.ApplyUpdateDialogTitle}"
     Width="347"
@@ -9,55 +10,68 @@
     ShowInTaskbar="False"
     Style="{StaticResource NormalWindow}"
     TextOptions.TextFormattingMode="Display"
-    WindowStartupLocation="CenterOwner">
-    <Grid>
-        <TextBlock
-            Margin="12 12 12 65"
-            FontSize="14"
-            Text="{x:Static res:MiscRes.ApplyUpdateDialogMessage}"
-            TextWrapping="Wrap" />
-        <TextBlock
-            Margin="0 0 0 45"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Bottom">
-            <Hyperlink Name="changelogLink" Click="changelogLink_Click">
-                <TextBlock Text="{x:Static res:MiscRes.ViewFullChangelog}" />
-            </Hyperlink>
-        </TextBlock>
-        <StackPanel
-            Margin="0 0 12 12"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Orientation="Horizontal">
-            <Button
-                Name="yesButton"
-                Height="23"
-                MinWidth="75"
-                Margin="0 0 0 0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Click="yesButton_Click"
-                Content="{x:Static res:CommonRes.Yes}"
-                IsDefault="True" />
-            <Button
-                Name="noButton"
-                Height="23"
-                MinWidth="75"
-                Margin="6 0 0 0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Content="{x:Static res:CommonRes.No}"
-                IsCancel="True" />
-            <Button
-                Name="disableUpdatesButton"
-                Height="23"
-                MinWidth="93"
-                Margin="20 0 0 0"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Click="disableUpdatesButton_Click"
-                Content="{x:Static res:MiscRes.DisableUpdatesButton}" />
-        </StackPanel>
+    WindowStartupLocation="CenterOwner"
+    WindowStyle="None">
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="30" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
+    </WindowChrome.WindowChrome>
+    <Border Style="{StaticResource WindowMainPanelStyle}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <controls:ToolWindowTitleBar Title="{x:Static res:MiscRes.ApplyUpdateDialogTitle}" Grid.Row="0" />
+            <Grid Grid.Row="1">
+                <TextBlock
+                    Margin="12 12 12 65"
+                    FontSize="14"
+                    Text="{x:Static res:MiscRes.ApplyUpdateDialogMessage}"
+                    TextWrapping="Wrap" />
+                <TextBlock
+                    Margin="0 0 0 45"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom">
+                    <Hyperlink Name="changelogLink" Click="changelogLink_Click">
+                        <TextBlock Text="{x:Static res:MiscRes.ViewFullChangelog}" />
+                    </Hyperlink>
+                </TextBlock>
+                <StackPanel
+                    Margin="0 0 12 12"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Orientation="Horizontal">
+                    <Button
+                        Name="yesButton"
+                        Height="23"
+                        MinWidth="75"
+                        Margin="0 0 0 0"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Bottom"
+                        Click="yesButton_Click"
+                        Content="{x:Static res:CommonRes.Yes}"
+                        IsDefault="True" />
+                    <Button
+                        Name="noButton"
+                        Height="23"
+                        MinWidth="75"
+                        Margin="6 0 0 0"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Bottom"
+                        Content="{x:Static res:CommonRes.No}"
+                        IsCancel="True" />
+                    <Button
+                        Name="disableUpdatesButton"
+                        Height="23"
+                        MinWidth="93"
+                        Margin="20 0 0 0"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Bottom"
+                        Click="disableUpdatesButton_Click"
+                        Content="{x:Static res:MiscRes.DisableUpdatesButton}" />
+                </StackPanel>
 
-    </Grid>
+            </Grid>
+        </Grid>
+    </Border>
 </Window>
