--- a/VidCoder/XamlResources/Button.xaml
+++ b/VidCoder/XamlResources/Button.xaml
@@ -67,7 +67,7 @@
 	</Style>
 
 	<Style x:Key="TitleBarButtonStyle" TargetType="Button">
-		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+		<Setter Property="Foreground" Value="{DynamicResource WindowTextBrush}" />
 		<Setter Property="Padding" Value="0" />
 		<Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
 		<Setter Property="IsTabStop" Value="False" />
