Added custom TextBox control template so Dark mode can work correctly on Windows 7.

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
 
                 <ResourceDictionary Source="/XamlResources/Button.xaml" />
+                <ResourceDictionary Source="/XamlResources/TextBox.xaml" />
                 <ResourceDictionary Source="/XamlResources/ComboBox.xaml" />
                 <ResourceDictionary Source="/XamlResources/GridViewColumnHeader.xaml" />
                 <ResourceDictionary Source="/XamlResources/ListView.xaml" />
